[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/intro/texti.png" type="Texture" id=1]
[ext_resource path="res://ui/intro/info_text.gd" type="Script" id=2]
[ext_resource path="res://ui/main_menu/controlls.png" type="Texture" id=3]

[node name="intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.294118, 0.596078, 1 )

[node name="texti" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 128.0
texture = ExtResource( 1 )

[node name="info_text" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
autowrap = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="into_text_timer" type="Timer" parent="info_text"]
autostart = true

[node name="controls" type="TextureRect" parent="info_text"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_top = -160.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip_button" type="Button" parent="info_text"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -30.0
text = "Skip >>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="info_text"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button_label" type="Label" parent="info_text/start_button"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "Start
Beam me up, Scotty"
align = 1
[connection signal="timeout" from="info_text/into_text_timer" to="info_text" method="_on_into_text_timer_timeout"]
[connection signal="pressed" from="info_text/skip_button" to="info_text" method="_on_skip_button_pressed"]
[connection signal="pressed" from="info_text/start_button" to="info_text" method="_on_start_button_pressed"]
